--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "require": {
         "vlucas/phpdotenv": "^5.3"
     },
+    "autoload": {
+        "psr-4": {
+            "AksuSoftware\\": "./"
+        }
+    },
     "authors": [
         {
             "name": "Batuhan AKSU",
