--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "autoload": {
         "psr-4": {
             "AksuSoftware\\": "./"
-        }
+        },
+        "files": ["Core/helpers.php"]
     },
     "authors": [
         {
